# stablehlo-gpu

./: .gitignore  LICENSE  README.md
attention-jax-export/: requirements.txt  simple_attention_elementwise.mlir  simple_attention_projection.mlir  simple_attention_projection.py
benchmarks/: baseline_vllm.py  profile_remora.py  sweep_expert_count.py  sweep_skew.py  triton_expert_kernel.py
benchmarks/results/: baseline_vllm.json  remora_profile.json  summary.md  sweep_concentration.csv  sweep_concentration.json  sweep_expert_count.csv  sweep_expert_count.json  sweep_skew.csv  sweep_skew.json
blog/: from-jax-to-metal.json  signal-to-noise.json  stablehlo-in-hand.json
compiler/: CMakeLists.txt  cpu.cpp  cpu.h  cpu_tests.cpp  cpu_tests.h  gpu.cpp  gpu.h  gpu_tests.cpp  gpu_tests.h  main.cpp  pipeline.cpp  pipeline.h
compiler/dialect/: UserDialect.cpp  UserDialect.h
compiler/passes/: ExpertOutlining.cpp  ExpertOutlining.h
jax/: verify_projection.py
md/: arm64-registers.md  pop-quiz.md
mlir/linalg/: attention_elementwise_lowered_to_linalg.mlir  attention_projection_lowered_to_linalg.mlir
mlir/stablehlo/: mixtral_moe_layer.mlir  simple_moe.mlir
scripts/: attention_elementwise_lower_to_linalg.sh  attention_projection_lowered_to_linalg.sh  bootstrap.sh  elementwise-explore.sh
scripts/demo/: obfuscate.py
scripts/explore/: elementwise-explore.sh  lower_elementwise_to_linalg.sh  lower_projection_to_linalg.sh
scripts/export/: distilled_name_classifier.py  export_mixtral_layer.py  export_moe_speculative_decoding.py  requirements.txt  simple_attention_elementwise.py  simple_moe.py
scripts/run/: run_elementwise.sh  run_projection.sh
scripts/verify/: verify_elementwise.py  verify_outlining.py
server/: main.go  pipeline.go
